ISSTA-2023-AE/data/Evaluation/EVALUATION-VIA-CONTROLLED-EXPERIMENTS/Bug-finding-trails/clang-fuzzer/gcc/set-8/fuzzer-file-4107f885339ab639387e2b208228e73904f23fc8.log
clang-fuzzer-8/segment_17/4107f885339ab639387e2b208228e73904f23fc8.c:20:5: error: redefinition of ‘main’
   20 | int main() {
      |     ^~~~
clang-fuzzer-8/segment_17/4107f885339ab639387e2b208228e73904f23fc8.c:4:1: note: previous definition of ‘main’ with type ‘int()’
    4 | main()
      | ^~~~
clang-fuzzer-8/segment_17/4107f885339ab639387e2b208228e73904f23fc8.c: In function ‘main’:
clang-fuzzer-8/segment_17/4107f885339ab639387e2b208228e73904f23fc8.c:22:73: error: stray ‘\1’ in program
   22 |   <U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000>for (<U+0001><U+0000><U+000F><U+0000>; c < 3; c++)
      |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                ^~~~~~~~
clang-fuzzer-8/segment_17/4107f885339ab639387e2b208228e73904f23fc8.c:22:75: error: stray ‘\17’ in program
   22 |   <U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000>for (<U+0001><U+0000><U+000F><U+0000>; c < 3; c++)
      |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                ^~~~~~~~
clang-fuzzer-8/segment_17/4107f885339ab639387e2b208228e73904f23fc8.c: At top level:
clang-fuzzer-8/segment_17/4107f885339ab639387e2b208228e73904f23fc8.c:26:3: error: expected declaration specifiers or ‘...’ before string constant
   26 | f("%d\n", b[c].a);
      |   ^~~~~~
clang-fuzzer-8/segment_17/4107f885339ab639387e2b208228e73904f23fc8.c:26:11: error: expected declaration specifiers or ‘...’ before ‘b’
   26 | f("%d\n", b[c].a);
      |           ^
clang-fuzzer-8/segment_17/4107f885339ab639387e2b208228e73904f23fc8.c:27:1: error: expected identifier or ‘(’ before ‘}’ token
   27 | }
      | ^
clang-fuzzer-8/segment_17/4107f885339ab639387e2b208228e73904f23fc8.c:32:7: error: conflicting types for ‘b’; have ‘short int’
   32 | short b;
      |       ^
clang-fuzzer-8/segment_17/4107f885339ab639387e2b208228e73904f23fc8.c:19:10: note: previous declaration of ‘b’ with type ‘struct <anonymous>[30]’
   19 | } static b[30];
      |          ^
clang-fuzzer-8/segment_17/4107f885339ab639387e2b208228e73904f23fc8.c: In function ‘fn1’:
clang-fuzzer-8/segment_17/4107f885339ab639387e2b208228e73904f23fc8.c:48:16: error: expected expression before ‘.’ token
   48 |           for (. = 0; a < 1; a++)
      |                ^
clang-fuzzer-8/segment_17/4107f885339ab639387e2b208228e73904f23fc8.c: At top level:
clang-fuzzer-8/segment_17/4107f885339ab639387e2b208228e73904f23fc8.c:62:1: error: expected identifier or ‘(’ before ‘int’
   62 | int
      | ^~~
clang-fuzzer-8/segment_17/4107f885339ab639387e2b208228e73904f23fc8.c:65:37: error: stray ‘\1’ in program
   65 |   fn<U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000>for (<U+0001><U+0000><U+000F><U+0000>; c < 3; c++)
      |                                                                                                                                                                                                                                  ^~~~~~~~
clang-fuzzer-8/segment_17/4107f885339ab639387e2b208228e73904f23fc8.c:65:39: error: stray ‘\17’ in program
   65 |   fn<U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000><U+0000>for (<U+0001><U+0000><U+000F><U+0000>; c < 3; c++)
      |                                                                                                                                                                                                                                                  ^~~~~~~~
clang-fuzzer-8/segment_17/4107f885339ab639387e2b208228e73904f23fc8.c:69:3: error: expected declaration specifiers or ‘...’ before string constant
   69 | f("%d\n", b[c].a);
      |   ^~~~~~
clang-fuzzer-8/segment_17/4107f885339ab639387e2b208228e73904f23fc8.c:69:11: error: expected declaration specifiers or ‘...’ before ‘b’
   69 | f("%d\n", b[c].a);
      |           ^
clang-fuzzer-8/segment_17/4107f885339ab639387e2b208228e73904f23fc8.c:70:1: error: expected identifier or ‘(’ before ‘}’ token
   70 | }
      | ^
clang-fuzzer-8/segment_17/4107f885339ab639387e2b208228e73904f23fc8.c:78:1: error: redefinition of ‘fn1’
   78 | fn1 ()
      | ^~~
clang-fuzzer-8/segment_17/4107f885339ab639387e2b208228e73904f23fc8.c:35:1: note: previous definition of ‘fn1’ with type ‘int()’
   35 | fn1 ()
      | ^~~
clang-fuzzer-8/segment_17/4107f885339ab639387e2b208228e73904f23fc8.c: In function ‘fn1’:
clang-fuzzer-8/segment_17/4107f885339ab639387e2b208228e73904f23fc8.c:91:16: error: expected expression before ‘.’ token
   91 |           for (. = 0; a < 1; a++)
      |                ^
clang-fuzzer-8/segment_17/4107f885339ab639387e2b208228e73904f23fc8.c: At top level:
clang-fuzzer-8/segment_17/4107f885339ab639387e2b208228e73904f23fc8.c:105:1: error: expected identifier or ‘(’ before ‘int’
  105 | int
      | ^~~
clang-fuzzer-8/segment_17/4107f885339ab639387e2b208228e73904f23fc8.c: In function ‘main’:
clang-fuzzer-8/segment_17/4107f885339ab639387e2b208228e73904f23fc8.c:23:24: internal compiler error: tree check: expected array_type, have error_mark in array_ref_low_bound, at tree.cc:12479
   23 |     printf("%d\n", b[c].a);
      |                    ~~~~^~
0x7e3fd0 tree_check_failed(tree_node const*, char const*, int, char const*, ...)
	.././../gcc-source/gcc/tree.cc:8688
0x7edb6d tree_check(tree_node*, char const*, int, char const*, tree_code)
	.././../gcc-source/gcc/tree.h:3450
0x7edb6d array_ref_low_bound(tree_node*)
	.././../gcc-source/gcc/tree.cc:12479
0xc310ef gimplify_compound_lval
	.././../gcc-source/gcc/gimplify.cc:3204
0xc2a904 gimplify_expr(tree_node**, gimple**, gimple**, bool (*)(tree_node*), int)
	.././../gcc-source/gcc/gimplify.cc:15008
0xc2b184 gimplify_expr(tree_node**, gimple**, gimple**, bool (*)(tree_node*), int)
	.././../gcc-source/gcc/gimplify.cc:15159
0xc36a0b gimplify_expr
	.././../gcc-source/gcc/gimplify.cc:16115
0xc36a0b gimplify_arg(tree_node**, gimple**, unsigned int, bool)
	.././../gcc-source/gcc/gimplify.cc:3487
0xc3718b gimplify_call_expr
	.././../gcc-source/gcc/gimplify.cc:3724
0xc2b877 gimplify_expr(tree_node**, gimple**, gimple**, bool (*)(tree_node*), int)
	.././../gcc-source/gcc/gimplify.cc:15028
0xc2e7f6 gimplify_stmt(tree_node**, gimple**)
	.././../gcc-source/gcc/gimplify.cc:7111
0xc2efb4 gimplify_bind_expr
	.././../gcc-source/gcc/gimplify.cc:1428
0xc2b891 gimplify_expr(tree_node**, gimple**, gimple**, bool (*)(tree_node*), int)
	.././../gcc-source/gcc/gimplify.cc:15257
0xc2e7f6 gimplify_stmt(tree_node**, gimple**)
	.././../gcc-source/gcc/gimplify.cc:7111
0xc2b8eb gimplify_statement_list
	.././../gcc-source/gcc/gimplify.cc:2019
0xc2b8eb gimplify_expr(tree_node**, gimple**, gimple**, bool (*)(tree_node*), int)
	.././../gcc-source/gcc/gimplify.cc:15501
0xc2e7f6 gimplify_stmt(tree_node**, gimple**)
	.././../gcc-source/gcc/gimplify.cc:7111
0xc2b8eb gimplify_statement_list
	.././../gcc-source/gcc/gimplify.cc:2019
0xc2b8eb gimplify_expr(tree_node**, gimple**, gimple**, bool (*)(tree_node*), int)
	.././../gcc-source/gcc/gimplify.cc:15501
0xc2e7f6 gimplify_stmt(tree_node**, gimple**)
	.././../gcc-source/gcc/gimplify.cc:7111
Please submit a full bug report, with preprocessed source (by using -freport-bug).
Please include the complete backtrace with any bug report.
See <https://gcc.gnu.org/bugs/> for instructions.
